--- a/src/game/server/server_resourcegatherer.vcxproj.filters
+++ b/src/game/server/server_resourcegatherer.vcxproj.filters
@@ -28,6 +28,15 @@
     <Filter Include="Source Files\Resource Gatherer">
       <UniqueIdentifier>{5CB00E6F-53E1-3BE7-595E-36798826F44B}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Resource Gatherer\Entities">
+      <UniqueIdentifier>{9BC9560E-F58D-F01C-7858-866DF377AC92}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Resource Gatherer\Weapons">
+      <UniqueIdentifier>{98C58943-4549-FA62-9A96-C5FF38D89292}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Resource Gatherer\Weapons\Base Classes">
+      <UniqueIdentifier>{59DFD9E7-839C-4B46-7540-8D56FDA6E886}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Source Files\temporary entities">
       <UniqueIdentifier>{EE0D1E04-BD60-DE4A-710E-2457C590BA24}</UniqueIdentifier>
     </Filter>
@@ -1745,6 +1754,33 @@
     <ClInclude Include="..\..\game\shared\resourcegatherer\resourcegatherer_player_shared.h">
       <Filter>Source Files\Resource Gatherer</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\game\shared\resourcegatherer\resourcegatherer_weapon_parse.h">
+      <Filter>Source Files\Resource Gatherer</Filter>
+    </ClInclude>
+    <ClInclude Include="resourcegatherer\rg_resourcepickup.h">
+      <Filter>Source Files\Resource Gatherer\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\game\shared\resourcegatherer\weapons\weapon_ar2.h">
+      <Filter>Source Files\Resource Gatherer\Weapons</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\game\shared\resourcegatherer\weapons\weapon_physcannon.h">
+      <Filter>Source Files\Resource Gatherer\Weapons</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\game\shared\resourcegatherer\weapons\weapon_rpg.h">
+      <Filter>Source Files\Resource Gatherer\Weapons</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\game\shared\resourcegatherer\weapons\weapon_slam.h">
+      <Filter>Source Files\Resource Gatherer\Weapons</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\game\shared\resourcegatherer\weapons\weapon_resourcegathererbase.h">
+      <Filter>Source Files\Resource Gatherer\Weapons\Base Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\game\shared\resourcegatherer\weapons\weapon_resourcegathererbase_machinegun.h">
+      <Filter>Source Files\Resource Gatherer\Weapons\Base Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\game\shared\resourcegatherer\weapons\weapon_resourcegathererbasecombatweapon.h">
+      <Filter>Source Files\Resource Gatherer\Weapons\Base Classes</Filter>
+    </ClInclude>
     <ClInclude Include="plasma.h">
       <Filter>Source Files\temporary entities</Filter>
     </ClInclude>
@@ -3246,6 +3282,60 @@
     </ClCompile>
     <ClCompile Include="..\..\game\shared\resourcegatherer\resourcegatherer_player_shared.cpp">
       <Filter>Source Files\Resource Gatherer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\resourcegatherer_weapon_parse.cpp">
+      <Filter>Source Files\Resource Gatherer</Filter>
+    </ClCompile>
+    <ClCompile Include="resourcegatherer\rg_resourcepickup.cpp">
+      <Filter>Source Files\Resource Gatherer\Entities</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\weapons\weapon_357.cpp">
+      <Filter>Source Files\Resource Gatherer\Weapons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\weapons\weapon_ar2.cpp">
+      <Filter>Source Files\Resource Gatherer\Weapons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\weapons\weapon_crossbow.cpp">
+      <Filter>Source Files\Resource Gatherer\Weapons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\weapons\weapon_crowbar.cpp">
+      <Filter>Source Files\Resource Gatherer\Weapons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\weapons\weapon_frag.cpp">
+      <Filter>Source Files\Resource Gatherer\Weapons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\weapons\weapon_physcannon.cpp">
+      <Filter>Source Files\Resource Gatherer\Weapons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\weapons\weapon_pistol.cpp">
+      <Filter>Source Files\Resource Gatherer\Weapons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\weapons\weapon_rpg.cpp">
+      <Filter>Source Files\Resource Gatherer\Weapons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\weapons\weapon_shotgun.cpp">
+      <Filter>Source Files\Resource Gatherer\Weapons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\weapons\weapon_slam.cpp">
+      <Filter>Source Files\Resource Gatherer\Weapons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\weapons\weapon_smg1.cpp">
+      <Filter>Source Files\Resource Gatherer\Weapons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\weapons\weapon_stunstick.cpp">
+      <Filter>Source Files\Resource Gatherer\Weapons</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\weapons\weapon_resourcegathererbase.cpp">
+      <Filter>Source Files\Resource Gatherer\Weapons\Base Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\weapons\weapon_resourcegathererbase_machinegun.cpp">
+      <Filter>Source Files\Resource Gatherer\Weapons\Base Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\weapons\weapon_resourcegathererbasebludgeon.cpp">
+      <Filter>Source Files\Resource Gatherer\Weapons\Base Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\weapons\weapon_resourcegathererbasecombatweapon.cpp">
+      <Filter>Source Files\Resource Gatherer\Weapons\Base Classes</Filter>
     </ClCompile>
     <ClCompile Include="basetempentity.cpp">
       <Filter>Source Files\temporary entities</Filter>
