--- a/src/game/client/client_resourcegatherer.vcxproj.filters
+++ b/src/game/client/client_resourcegatherer.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="Source Files\Resource Gatherer">
       <UniqueIdentifier>{5CB00E6F-53E1-3BE7-595E-36798826F44B}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Resource Gatherer\Entities">
+      <UniqueIdentifier>{9BC9560E-F58D-F01C-7858-866DF377AC92}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Source Files\Resource Gatherer\UI">
       <UniqueIdentifier>{965E6EA9-6E8A-2FC3-B519-D795F69456AE}</UniqueIdentifier>
     </Filter>
@@ -1886,6 +1889,9 @@
     <ClInclude Include="..\..\game\shared\resourcegatherer\resourcegatherer_weapon_parse.h">
       <Filter>Source Files\Resource Gatherer</Filter>
     </ClInclude>
+    <ClInclude Include="resourcegatherer\c_rg_resourcepickup.h">
+      <Filter>Source Files\Resource Gatherer\Entities</Filter>
+    </ClInclude>
     <ClInclude Include="resourcegatherer\ui\backgroundpanel.h">
       <Filter>Source Files\Resource Gatherer\UI</Filter>
     </ClInclude>
@@ -3195,6 +3201,9 @@
     </ClCompile>
     <ClCompile Include="..\..\game\shared\resourcegatherer\resourcegatherer_weapon_parse.cpp">
       <Filter>Source Files\Resource Gatherer</Filter>
+    </ClCompile>
+    <ClCompile Include="resourcegatherer\c_rg_resourcepickup.cpp">
+      <Filter>Source Files\Resource Gatherer\Entities</Filter>
     </ClCompile>
     <ClCompile Include="resourcegatherer\ui\backgroundpanel.cpp">
       <Filter>Source Files\Resource Gatherer\UI</Filter>
