Fully added rg_resource_taker to the game and the fgd. Updated rg_zoo to show an example of rg_resource_taker. Implemented CResourceGathererRules::TakeResources method. Added functionality for one time use of rg_resource_taker. Added an Input Func for hammer that resets the activation state for rg_resource_taker. Added output to rg_resource_taker which is called when taking fails. Added output to rg_resource_taker which is called when the resources are attempted to be taken but already have. If one_time is false then this will never call.

--- a/src/game/server/server_resourcegatherer.vcxproj.filters
+++ b/src/game/server/server_resourcegatherer.vcxproj.filters
@@ -3286,6 +3286,9 @@
     <ClCompile Include="..\..\game\shared\resourcegatherer\resourcegatherer_weapon_parse.cpp">
       <Filter>Source Files\Resource Gatherer</Filter>
     </ClCompile>
+    <ClCompile Include="resourcegatherer\rg_resource_taker.cpp">
+      <Filter>Source Files\Resource Gatherer\Entities</Filter>
+    </ClCompile>
     <ClCompile Include="resourcegatherer\rg_resourcepickup.cpp">
       <Filter>Source Files\Resource Gatherer\Entities</Filter>
     </ClCompile>
