--- a/src/game/server/server_resourcegatherer.vcxproj.filters
+++ b/src/game/server/server_resourcegatherer.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="Source Files\Resource Gatherer">
       <UniqueIdentifier>{5CB00E6F-53E1-3BE7-595E-36798826F44B}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Resource Gatherer\Achievements">
+      <UniqueIdentifier>{7F09ABB3-B4F6-D2BC-FFB9-D55F1EDFF79F}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Source Files\Resource Gatherer\Entities">
       <UniqueIdentifier>{9BC9560E-F58D-F01C-7858-866DF377AC92}</UniqueIdentifier>
     </Filter>
@@ -3265,6 +3268,9 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files\Precompiled Header</Filter>
     </ClCompile>
+    <ClCompile Include="resourcegatherer\resourcegatherer_bot_temp.cpp">
+      <Filter>Source Files\Resource Gatherer</Filter>
+    </ClCompile>
     <ClCompile Include="resourcegatherer\resourcegatherer_client.cpp">
       <Filter>Source Files\Resource Gatherer</Filter>
     </ClCompile>
@@ -3285,6 +3291,9 @@
     </ClCompile>
     <ClCompile Include="..\..\game\shared\resourcegatherer\resourcegatherer_weapon_parse.cpp">
       <Filter>Source Files\Resource Gatherer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\game\shared\resourcegatherer\achievements_resourcegatherer.cpp">
+      <Filter>Source Files\Resource Gatherer\Achievements</Filter>
     </ClCompile>
     <ClCompile Include="resourcegatherer\rg_resource_taker.cpp">
       <Filter>Source Files\Resource Gatherer\Entities</Filter>
